--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -1,8 +1,10 @@
-FROM node:20-alpine AS builder
+#Build
+
+FROM node:18-alpine AS build
 
 WORKDIR /app
 
-COPY package.json package-lock.json ./
+COPY package*.json ./
 
 RUN npm ci
 
@@ -10,25 +12,16 @@ COPY . .
 
 RUN npm run build
 
-FROM node:20-alpine AS runner
+
+# Prod
+FROM node:18-alpine AS prod
 
 WORKDIR /app
 
+COPY --from=build /app/.next/standalone ./
+COPY --from=build /app/.next/static ./.next/static
+
 ENV NODE_ENV=production
 
-RUN addgroup --system --gid 1001 nodejs && \
-    adduser --system --uid 1001 nextjs
-
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/.next/standalone ./
-COPY --from=builder /app/.next/static ./.next/static
-
-RUN chown -R nextjs:nodejs /app
-
-USER nextjs
-
 EXPOSE 3000
-
-ENV PORT 3000
-
 CMD ["node", "server.js"]
