--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -15,13 +15,14 @@ RUN npm run build
 
 # Prod
 FROM node:18-alpine AS prod
-
 WORKDIR /app
 
 COPY --from=build /app/.next/standalone ./
+
 COPY --from=build /app/.next/static ./.next/static
 
-ENV NODE_ENV=production
+COPY --from=build /app/public ./public
 
+ENV NODE_ENV=production
 EXPOSE 3000
 CMD ["node", "server.js"]
